--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,25 @@ section {
     display: flex;
 }
 
+@media (max-width: 870px) {
+  .menu-nav {
+     width: 70%;
+  }
+}
+
+@media (max-width: 600px) {
+  .menu-nav {
+     width: 80%;
+  }
+}
+
+@media (max-width: 400px) {
+  .menu-nav {
+     width: 100%;
+  }
+}
+
+
 .menu-nav ul {
     list-style: none;
     position: relative;
